--- a/algobattle_web/templates/login_email_sent.jinja
+++ b/algobattle_web/templates/login_email_sent.jinja
@@ -4,7 +4,7 @@
 <div class="row justify-content-center mt-5">
 <div class="col-5">
     <div class="alert alert-success" role="alert">
-        Click the link in the email to login.
+        We've sent you an email, click the link in it to login.
     </div>
 </div>
 </div>
