--- a/algobattle_web/templates/user.jinja
+++ b/algobattle_web/templates/user.jinja
@@ -2,18 +2,18 @@
 {% block content %}
 <div class="row justify-content-center mt-5">
 <div class="col-5">
-<h2>Edit user data</h2>
+<h3>Edit user data</h3>
     {% if error %}
-    <div class="alert alert-warning" role="alert">
-        The email {{error.email}} is already in use by another user!
+    <div class="alert alert-danger" role="alert">
+        The email {{error.email}} is already used by another user!
     </div>
     {% endif %}
     <form method="post">
         <div class="mb-3">
             <label for="email" class="form-label">email address</label>
-            <input type="email" class="form-control" name="email" required="required" value="{{user.email}}">
+            <input type="email" class="form-control" name="email" placeholder="{{user.email}}">
             <label for="name" class="form-label">name</label>
-            <input type="text" class="form-control" name="name" required="required" value="{{user.name}}">
+            <input type="text" class="form-control" name="name" placeholder="{{user.name}}">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
