--- a/algobattle_web/templates/login.jinja
+++ b/algobattle_web/templates/login.jinja
@@ -1,5 +1,5 @@
 {% extends "base.jinja" %}
-{% block content %}
+{% block content_base %}
 
 <div class="row justify-content-center mt-5">
 <div class="col-5">
