use templated in home

--- a/algobattle_web/templates/home.jinja
+++ b/algobattle_web/templates/home.jinja
@@ -4,7 +4,7 @@
 <div class="row justify-content-center mt-5">
 <div class="col-5">
     Algobattle home page<br>
-    user: {{user}}
+    user: {{user.name}}
 </div>
 </div>
 
