--- a/algobattle_web/templates/login.jinja
+++ b/algobattle_web/templates/login.jinja
@@ -6,20 +6,24 @@
     {% if logged_in %}
     <div class="alert alert-warning" role="alert">
         You are already logged in as {{logged_in}}. Are you sure you want to log in with a different account?
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     {% endif %}
 
     {% if error == 1 %}
     <div class="alert alert-danger" role="alert">
         Email is not registered to a user.
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     {% elif error == 2 %}
     <div class="alert alert-danger" role="alert">
         Invalid token.
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     {% elif error == 3 %}
     <div class="alert alert-danger" role="alert">
         Expired token.
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     {% endif %}
 
