--- a/algobattle_web/templates/sidebar.jinja
+++ b/algobattle_web/templates/sidebar.jinja
@@ -3,17 +3,26 @@
 
 <div class="container-fluid">
     <div class="row flex-nowrap">
-        <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
-            <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+        <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 text-bg-dark">
+            <div class="d-flex flex-column px-3 pt-2 text-white min-vh-100">
                 <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
                     <span class="fs-5 d-none d-sm-inline">Algobattle</span>
-                </a>
-                <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+                </a>          
+                <hr>
+                <ul class="nav nav-pills flex-column mb-auto" id="menu">
                     <li class="nav-item">
                         <a href="/" class="nav-link align-middle px-0">
-                            <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
+                            <i class="bi bi-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
                         </a>
                     </li>
+                    {% if user.is_admin %}
+                    <hr>
+                    <li class="nav-item">
+                        <a href="/admin/users" class="nav-link align-middle px-0">
+                            <i class="bi bi-people"></i></i> <span class="ms-1 d-none d-sm-inline">Users</span>
+                        </a>
+                    </li>
+                    {% endif %}
                 </ul>
                 <hr>
                 <div class="btn-group dropup pb-4">
