--- a/algobattle_web/templates/home.jinja
+++ b/algobattle_web/templates/home.jinja
@@ -3,8 +3,7 @@
 
 <div class="row justify-content-center mt-5">
 <div class="col-5">
-    Algobattle home page<br>
-    user: {{user.name}}
+    home page
 </div>
 </div>
 
