--- a/algobattle_web/templates/sidebar.jinja
+++ b/algobattle_web/templates/sidebar.jinja
@@ -2,57 +2,57 @@
 {% block content_base %}
 
 <div class="container-fluid">
-    <div class="row flex-nowrap">
-        <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 text-bg-dark">
-            <div class="d-flex flex-column px-3 pt-2 text-white min-vh-100">
-                <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                    <span class="fs-5 d-none d-sm-inline">Algobattle</span>
-                </a>
-                <hr>
-                <ul class="nav nav-pills flex-column mb-auto" id="menu">
-                    <li class="nav-item">
-                        <a href="/" class="nav-link align-middle {{'active' if request.url.path == '/'}}">
-                            <i class="bi bi-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
-                        </a>
-                    </li>
-                    {% if user.is_admin %}
-                    <hr>
-                    <li class="nav-item">
-                        <a href="/admin/users" class="nav-link align-middle {{'active' if request.url.path == '/admin/users'}}">
-                            <i class="bi bi-people"></i></i> <span class="ms-1 d-none d-sm-inline">Users</span>
-                        </a>
-                    </li>
-                    {% endif %}
-                </ul>
-                <hr>
-                <div class="btn-group dropup pb-4">
-                    <a type="button" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="bi bi-person-circle"></i> <span class="d-none d-sm-inline mx-1">{{user.name}}</span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
-                        {% if user.teams %}
-                        <li>
-                            <a class="dropdown-item" href="/teams">Teams</a>
-                        </li>
-                        {% endif %}
-                        <li><a class="dropdown-item" href="/user">Profile</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li>
-                            <form action="/user/logout" method="post">
-                                <button class="dropdown-item" type="submit" name="LogoutButton" value="test">Sign out</button>
-                            </form>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+  <div class="row flex-nowrap">
+    <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 text-bg-dark">
+      <div class="d-flex flex-column px-3 pt-2 text-white min-vh-100">
+        <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+          <span class="fs-5 d-none d-sm-inline">Algobattle</span>
+        </a>
+        <hr>
+        <ul class="nav nav-pills flex-column mb-auto" id="menu">
+          <li class="nav-item">
+            <a href="/" class="nav-link align-middle {{'active' if request.url.path == '/'}}">
+              <i class="bi bi-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
+            </a>
+          </li>
+          {% if user.is_admin %}
+          <hr>
+          <li class="nav-item">
+            <a href="/admin/users" class="nav-link align-middle {{'active' if request.url.path == '/admin/users'}}">
+              <i class="bi bi-people"></i></i> <span class="ms-1 d-none d-sm-inline">Users</span>
+            </a>
+          </li>
+          {% endif %}
+        </ul>
+        <hr>
+        <div class="dropup">
+          <a type="button" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="bi bi-person-circle"></i> <span class="d-none d-sm-inline mx-1">{{user.name}}</span>
+          </a>
+          <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
+            {% if user.teams %}
+            <li>
+              <a class="dropdown-item" href="/teams">Teams</a>
+            </li>
+            {% endif %}
+            <li><a class="dropdown-item" href="/user">Profile</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li>
+              <form action="/user/logout" method="post">
+                <button class="dropdown-item" type="submit" name="LogoutButton" value="test">Sign out</button>
+              </form>
+            </li>
+          </ul>
         </div>
-        <div class="col py-3">
-            {% block content %}
-            {% endblock %}
-        </div>
+      </div>
     </div>
+    <div class="col py-3">
+      {% block content %}
+      {% endblock %}
+    </div>
+  </div>
 </div>
 
 {% endblock %}
