--- a/algobattle_web/templates/login_email_sent.jinja
+++ b/algobattle_web/templates/login_email_sent.jinja
@@ -1,5 +1,5 @@
-{% extends "base.jinja" %}
-{% block content_base %}
+{% extends "sidebar.jinja" %}
+{% block content %}
 
 <div class="row justify-content-center mt-5">
   <div class="col-5">
