--- a/algobattle_web/templates/sidebar.jinja
+++ b/algobattle_web/templates/sidebar.jinja
@@ -7,6 +7,7 @@
         <a href="/" class="d-flex align-items-center mb-md-0 me-md-auto text-white text-decoration-none">
           <span class="fs-4 d-none d-sm-inline">Algobattle</span>
         </a>
+        {% if user %}
         <hr class="d-none d-sm-inline">
         <ul class="nav nav-pills flex-column mb-auto mx-auto mx-sm-0" id="menu">
           <li class="nav-item">
@@ -44,7 +45,8 @@
               </form>
             </li>
           </ul>
-      </div>
+        </div>
+        {% endif %}
     </div>
     <div class="col py-3">
       {% block content %}
