move sidebar code to base.jinja

--- a/algobattle_web/templates/user.jinja
+++ b/algobattle_web/templates/user.jinja
@@ -1,4 +1,4 @@
-{% extends "sidebar.jinja" %}
+{% extends "base.jinja" %}
 {% block content %}
 <div class="row justify-content-center mt-5">
 <div class="col-9">
