--- a/algobattle_web/templates/base.jinja
+++ b/algobattle_web/templates/base.jinja
@@ -9,7 +9,59 @@
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    {% block content_base %}
-    {% endblock %}
+
+    <div class="container-fluid">
+      <div class="row flex-nowrap">
+        <div class="d-flex flex-column col-2 col-sm-3 col-xl-2 py-3 px-0 px-sm-3 text-bg-dark text-white min-vh-100">
+            <a href="/" class="d-flex align-items-center mb-md-0 me-md-auto text-white text-decoration-none">
+              <span class="fs-4 d-none d-sm-inline">Algobattle</span>
+            </a>
+            {% if user %}
+            <hr class="d-none d-sm-inline">
+            <ul class="nav nav-pills flex-column mb-auto mx-auto mx-sm-0" id="menu">
+              <li class="nav-item">
+                <a href="/" class="nav-link align-middle {{'active' if request.url.path == '/'}}">
+                  <i class="bi bi-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
+                </a>
+              </li>
+              {% if user.is_admin %}
+              <hr>
+              <li class="nav-item">
+                <a href="/admin/users" class="nav-link align-middle {{'active' if request.url.path == '/admin/users'}}">
+                  <i class="bi bi-people"></i></i> <span class="ms-1 d-none d-sm-inline">Users</span>
+                </a>
+              </li>
+              {% endif %}
+            </ul>
+            <hr class="d-none d-sm-inline">
+            <div class="dropup px-3 p-sm-0">
+              <a class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="bi bi-person-circle me-2"></i> <strong class="d-none d-sm-inline">{{user.name}}</strong>
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
+                {% if user.teams %}
+                <li>
+                  <a class="dropdown-item" href="/teams">Teams</a>
+                </li>
+                {% endif %}
+                <li><a class="dropdown-item" href="/user">Profile</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li>
+                  <form action="/user/logout" method="post">
+                    <button class="dropdown-item" type="submit" name="LogoutButton" value="test">Sign out</button>
+                  </form>
+                </li>
+              </ul>
+            </div>
+            {% endif %}
+        </div>
+        <div class="col py-3">
+          {% block content %}
+          {% endblock %}
+        </div>
+      </div>
+    </div>
   </body>
 </html>
