--- a/algobattle_web/templates/base.jinja
+++ b/algobattle_web/templates/base.jinja
@@ -12,7 +12,7 @@
 
     <div class="container-fluid">
       <div class="row flex-nowrap">
-        <div class="d-flex flex-column col-2 py-3 px-0 px-sm-3 text-bg-dark text-white min-vh-100">
+        <div class="d-flex flex-column col-2 py-3 px-0 px-sm-3 text-bg-dark text-nowrap text-white min-vh-100">
             <a href="/" class="d-flex align-items-center mb-md-0 me-md-auto text-white text-decoration-none">
               <span class="fs-4 d-none d-sm-inline">Algobattle</span>
             </a>
@@ -20,7 +20,7 @@
             <hr class="d-none d-sm-inline">
             <ul class="nav nav-pills flex-column mb-auto mx-auto mx-sm-0" id="menu">
               <li class="nav-item">
-                <a href="/" class="nav-link align-middle text-nowrap {{'active' if request.url.path == '/'}}">
+                <a href="/" class="nav-link align-middle {{'active' if request.url.path == '/'}}">
                   <i class="bi bi-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
                 </a>
               </li>
