cleanup main content formatting

--- a/algobattle_web/templates/base.jinja
+++ b/algobattle_web/templates/base.jinja
@@ -57,9 +57,11 @@
             </div>
             {% endif %}
         </div>
-        <div class="col py-3">
-          {% block content %}
-          {% endblock %}
+        <div class="col-10 py-3">
+            <div class="row justify-content-center mt-5"> 
+              {% block content %}
+              {% endblock %}
+            </div>
         </div>
       </div>
     </div>
