--- a/algobattle_web/templates/user.jinja
+++ b/algobattle_web/templates/user.jinja
@@ -1,26 +1,25 @@
 {% extends "base.jinja" %}
 {% block content %}
-<div class="row justify-content-center mt-5">
-<div class="col-9">
+
+<div class="col-8">
   {% if error %}
   <div class="alert alert-danger" role="alert">
     The email {{error.email}} is already used by another user!
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <button type="button" class="btn-close float-end" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
   {% endif %}
 </div>
-  <div class="col-6">
-    <h3>Edit user data</h3>
-    <form method="post">
-      <div class="mb-3">
-        <label for="email" class="form-label">email address</label>
-        <input type="email" class="form-control" name="email" placeholder="{{user.email}}">
-        <label for="name" class="form-label">name</label>
-        <input type="text" class="form-control" name="name" placeholder="{{user.name}}">
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-  </div>
+<div class="col-6">
+  <h3>Edit user data</h3>
+  <form method="post">
+    <div class="mb-3">
+      <label for="email" class="form-label">email address</label>
+      <input type="email" class="form-control" name="email" placeholder="{{user.email}}">
+      <label for="name" class="form-label">name</label>
+      <input type="text" class="form-control" name="name" placeholder="{{user.name}}">
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
 </div>
 
 {% endblock %}
