--- a/algobattle_web/templates/base.jinja
+++ b/algobattle_web/templates/base.jinja
@@ -12,7 +12,7 @@
 
     <div class="container-fluid">
       <div class="row flex-nowrap">
-        <div class="d-flex flex-column col-2 py-3 px-0 px-sm-3 text-bg-dark text-nowrap text-white min-vh-100">
+        <div class="d-flex flex-column col-2 py-3 px-0 px-sm-3 text-bg-dark overflow-hidden text-white min-vh-100">
             <a href="/" class="d-flex align-items-center mb-md-0 me-md-auto text-white text-decoration-none">
               <span class="fs-4 d-none d-sm-inline">Algobattle</span>
             </a>
@@ -34,7 +34,7 @@
               {% endif %}
             </ul>
             <hr class="d-none d-sm-inline">
-            <div class="dropup px-3 p-sm-0">
+            <div class="dropup px-3 p-sm-0 btn">
               <a class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="bi bi-person-circle me-2"></i> <strong class="d-none d-sm-inline">{{user.name}}</strong>
               </a>
