make buttons nicer

--- a/algobattle_web/templates/admin_users.jinja
+++ b/algobattle_web/templates/admin_users.jinja
@@ -18,16 +18,14 @@
         <td>{{ usr.name }}{%if usr.is_admin%} <i class="bi bi-patch-check-fill text-success" data-bs-toggle="tooltip" data-bs-placement="right" title="Admin"></i>{%endif%}</td>
         <td>{{ usr.email }}</td>
         <td>{{ usr.teams | join(", ") }}</td>
-        <td class="text-center">
+        <td class="text-end">
           <div class="btn-group btn-group-sm" role="group" aria-label="Edit user">
             {% if usr != user %}
-            <button type="button" class="btn btn-outline-success" data-bs-toggle="tooltip" title="{{'Remove' if usr.is_admin else 'Make'}} admin">
-              <i class="bi bi-patch-{{'minus' if usr.is_admin else 'plus'}}-fill"></i>
+            <button type="button" class="btn btn-success" data-bs-toggle="tooltip" title="{{'Remove' if usr.is_admin else 'Make'}} admin">
+              <i class="bi bi-patch-{{'minus' if usr.is_admin else 'plus'}}"></i>
             </button>
-            {% endif %}
-            <button type="button" class="btn btn-outline-warning" data-bs-toggle="tooltip" title="Edit"><i class="bi bi-pencil-fill"></i></button>
-            {% if usr != user %}
-            <button type="button" class="btn btn-outline-danger" data-bs-toggle="tooltip" title="Delete"><i class="bi bi-x"></i></button>
+            <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit"><i class="bi bi-pencil"></i></button>
+            <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete"><i class="bi bi-x"></i></button>
             {% endif %}
           </div>
         </td>
