--- a/algobattle_web/templates/admin_users.jinja
+++ b/algobattle_web/templates/admin_users.jinja
@@ -6,7 +6,7 @@
 <template id="table_row">
   <td>
     <div v-if="editing">
-      <input class="form-control" name="name" :placeholder="user.name">
+      <input class="form-control" name="name" type="text" :placeholder="user.name">
       <input type="checkbox" class="btn-check" id="set-admin" name="is_admin" :checked="user.is_admin ? 'checked' : null">
       <label class="btn btn-success btn-sm" for="set-admin"><i class="bi bi-patch-check"></i></label>
     </div>
@@ -16,7 +16,7 @@
     </div>
   </td>
   <td>
-    <input v-if="editing" class="form-control" name="email" :placeholder="user.email">
+    <input v-if="editing" class="form-control" name="email" type="email" :placeholder="user.email">
     <span v-else>${user.email}</span>
   </td>
   <td><span>${user.teams?.join(", ")}</span></td>
