--- a/algobattle_web/templates/admin_users.jinja
+++ b/algobattle_web/templates/admin_users.jinja
@@ -49,6 +49,17 @@
       </tbody>
     </table>
   </form>
+  <h3>Create new user</h3>
+  <form id="create-user" method="post" action="users/create">
+    <label for="name" class="form-label">name</label>
+    <input class="form-control" name="name" type="text" required="required">
+    <label for="email" class="form-label">email</label>
+    <input class="form-control" name="email" type="email" required="required">
+    <label for="set-admin" class="form-label">is admin</label>
+    <input type="checkbox" class="btn-check" id="set-admin" name="is_admin">
+    <label class="btn btn-success btn-sm" for="set-admin"><i class="bi bi-patch-check"></i></label><br>
+    <button type="submit" class="btn btn-primary">Create</button>
+  </form>
 </div>
 
 {% endblock %}
