make tooltips show on dynamic elements

--- a/algobattle_web/templates/admin_users.jinja
+++ b/algobattle_web/templates/admin_users.jinja
@@ -9,7 +9,7 @@
       <input class="form-control" name="name" type="text" :placeholder="user.name">
       <div class="input-group-append">
         <input type="checkbox" class="btn-check" id="set-admin" name="is_admin" :checked="user.is_admin ? 'checked' : null">
-        <label class="btn btn-success btn-sm" for="set-admin"><i class="bi bi-patch-check"></i></label>
+        <label class="btn btn-success btn-sm" for="set-admin" @vue:mounted="new bootstrap.Tooltip($el)" data-bs-toggle="tooltip" title="Admin"><i class="bi bi-patch-check"></i></label>
       </div>
     </div>
     <div v-else>
@@ -24,9 +24,9 @@
   <td><span>${user.teams?.join(", ")}</span></td>
   <td class="text-end">
     <div class="btn-group btn-group-sm" role="group" v-if="user.id != '{{user.id}}'">
-      <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete user" v-if="editing"><i class="bi bi-person-x"></i></button>
+      <button type="button" class="btn btn-danger" @vue:mounted="new bootstrap.Tooltip($el)" data-bs-toggle="tooltip" title="Delete user" v-if="editing"><i class="bi bi-person-x"></i></button>
       <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit user" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
-      <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing"><i class="bi bi-check2"></i></button>
+      <button type="submit" class="btn btn-success" @vue:mounted="new bootstrap.Tooltip($el)" data-bs-toggle="tooltip" title="Submit edit" v-if="editing"><i class="bi bi-check2"></i></button>
     </div>
   </td>
 </template>
